--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ data/*
 *.png
 *.tgz
 *.csv
+# Ignore Jupyter notebook checkpoints
+**/.ipynb_checkpoints/
+
+# Ignore Python bytecode files and __pycache__ directories
+**/__pycache__/
+*.pyc
+
