--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,11 +19,13 @@ tabulate = "0.9.0"
 tqdm = "^4.67.1"
 ray = {extras = ["data", "serve", "train", "tune"], version = "^2.42.1"}
 datasets = "^3.3.2"
-transformers = "^4.49.0"
+transformers = "4.49.0"
 fschat = "^0.2.36"
-torch = "2.0.0"
+torch = "^2.6.0"
 accelerate = "^1.4.0"
 psutil = "^7.0.0"
+sentencepiece = "^0.2.0"
+einops = "^0.8.1"
 
 
 [build-system]
