--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ accelerate = "^1.4.0"
 psutil = "^7.0.0"
 sentencepiece = "^0.2.0"
 einops = "^0.8.1"
+ipykernel = "^6.29.5"
+huggingface-hub = "^0.29.1"
+ipywidgets = "^8.1.5"
+bitsandbytes = "^0.45.2"
 
 
 [build-system]
